--- a/scss/fxj/_views.scss
+++ b/scss/fxj/_views.scss
@@ -222,11 +222,14 @@
     &:nth-of-type(2) {
       @extend .col-sm-12;
       @extend .col-md-4;
+      .collaborate-feature {
+        text-align: left;
+      }
     }
   }
   .collaborate-feature {
-    text-align: center;
     margin-bottom: 2rem;
+    text-align: center;
 
     a {
       @extend .btn-donate;
